kubernetes/ingressattempt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie 
spec:
  ingressClassName: traefik
  rules:
  - host: "local-mealie.com" 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie
            port: 
              number: 9000
